// spotless의 Eclipse 포매터 전용 서브트리를 빌드스크립트 클래스패스에서 제외한다.
// spotless-lib-extra는 dev.equo.ide:solstice(Eclipse P2 번들 다운로더)를 통해
// okhttp → okio → kotlin-stdlib 4종과 org.eclipse.platform:org.eclipse.osgi를 끌어온다.
// 본 프로젝트는 googleJavaFormat만 사용하므로 이 경로는 실행되지 않으며, 제외해도
// spotlessCheck/spotlessApply가 정상 동작한다(검증 완료).
// 효과: 폐쇄망 반입 대상 축소 + 오픈소스 점검에서 미사용 빌드 의존성 지적 제거.
// ⚠️ spotless 포매터를 eclipse() 계열로 바꾸려면 이 제외를 먼저 걷어내야 한다.
// 주의: org.eclipse.jgit은 다른 그룹이라 제외되지 않으므로 ratchet 등 git 연동 기능은 유지된다.
buildscript {
	configurations.classpath {
		exclude group: 'dev.equo.ide'
		exclude group: 'org.eclipse.platform'
	}
}

plugins {
	id 'java'
	id 'war'
	id 'org.springframework.boot' version '4.1.0'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'jacoco'
	id 'com.diffplug.spotless' version '7.0.4'
}

group = 'com.kdb'
version = '0.0.1-SNAPSHOT'
description = 'IT Project Portal backend API'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

// CQ-07: Java 포매터 — google-java-format AOSP(4칸 들여쓰기) 기준
// spotlessCheck는 check 태스크에 자동 연결되어 포맷 위반 시 빌드가 실패한다
spotless {
	java {
		target 'src/main/java/**/*.java', 'src/test/java/**/*.java'
		googleJavaFormat('1.28.0').aosp()
		removeUnusedImports()
		trimTrailingWhitespace()
		endWithNewline()
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

// Nexus 접속 가능 여부를 1초 TCP 프로브로 판정.
// 접속 불가 환경에서 Nexus를 저장소로 등록하면 의존성마다 연결 타임아웃(기본 30초×재시도)을
// 기다린 뒤에야 다음 순위로 넘어가 빌드가 극단적으로 느려지므로, 닿을 때만 등록합니다.
def nexusReachable = {
	try {
		new Socket().withCloseable { s ->
			s.connect(new InetSocketAddress('10.6.65.151', 20080), 1000)
		}
		true
	} catch (Exception ignored) {
		false
	}
}()

// 로컬 폴더 저장소 사용 가능 여부를 "폴더 존재"가 아니라 "jar 보유"로 판정.
// 백신 정책 등으로 jar만 삭제되면 POM·.module은 남으므로, Gradle이 이 저장소로 모듈을
// 확정한 뒤 아티팩트를 찾지 못해 실패하며 뒤 순위 저장소로 폴백하지 않습니다.
// jar이 하나도 없으면 아예 등록하지 않아 Nexus·Maven Central로 자동 전환되게 합니다.
def localMavenRepoDir = file('C:/maven-repo')
def localMavenRepoUsable = {
	if (!localMavenRepoDir.isDirectory()) {
		return false
	}
	try {
		// anyMatch는 첫 jar에서 단축 평가되므로 저장소가 커도 비용이 작습니다.
		java.nio.file.Files.walk(localMavenRepoDir.toPath()).withCloseable { paths ->
			paths.anyMatch { it.fileName.toString().endsWith('.jar') }
		}
	} catch (Exception ignored) {
		false
	}
}()
if (localMavenRepoDir.isDirectory() && !localMavenRepoUsable) {
	logger.warn("[저장소] {} 에 jar이 없어 로컬 폴더 저장소를 건너뜁니다. 외부망 저장소로 해석합니다.", localMavenRepoDir)
}

// 저장소 탐색 우선순위: Gradle은 선언 순서대로 저장소를 시도합니다 (1순위 → 3순위).
repositories {
	// 1순위: 반입한 로컬 폴더 저장소 (make-local-maven-repo.ps1 산출물) — jar 보유 시에만 등록
	if (localMavenRepoUsable) {
		maven {
			url = 'file:///C:/maven-repo'
			// 미러는 Gradle 캐시 사본이라 .module을 포함합니다. KMP 아티팩트는 .module의
			// variant 리다이렉션으로만 실제 JVM jar에 도달하므로 Nexus용 우회 옵션을 쓰지 않습니다.
			// 상세 사유는 settings.gradle의 같은 저장소 선언 주석 참조.
			metadataSources {
				gradleMetadata()
				mavenPom()
				artifact()
			}
		}
	}
	// 2순위: 내부 Nexus (폐쇄망 반입 아티팩트) — 접속 가능할 때만 등록
	if (nexusReachable) {
		maven {
			url = 'http://10.6.65.151:20080/repository/maven-releases/'
			allowInsecureProtocol = true   // http이므로 필수
			// Gradle Module Metadata(.module) 미요청 — POM만으로 해석.
			// .module은 반입 신청 불가 유형이므로 저장소에 없어도 동작하도록 필수 유지.
			metadataSources {
				mavenPom()
				artifact()
				ignoreGradleMetadataRedirection()
			}
		}
	}
	// 3순위: Maven Central (외부망 가능 환경 폴백)
	mavenCentral()
}

// Snyk 취약점 대응 강제 버전(과거) 제거 — Spring Boot 4.1.0 BOM이 모든 안전 하한선 이상으로 관리.
//   spring-framework 7.0.8(≥7.0.6), jackson 2.x 2.21.4(≥2.21.2), logback 1.5.x(≥1.5.32).
//   4.0.5 시절의 강제(org.springframework→7.0.6, jackson→2.21.2 등)는 4.1.0에서는 오히려
//   BOM 관리값을 끌어내리는 다운그레이드가 되므로 제거함. 신규 Snyk 지적 발생 시
//   resolutionStrategy 대신 BOM 버전 프로퍼티(예: ext['spring-framework.version']) 오버라이드를 우선 검토.

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.3'
	// Spring Boot 4.0+는 Flyway 오토컨피그를 별도 모듈(spring-boot-flyway)로 분리함.
	// 스타터가 flyway-core(BOM 관리 버전) + 오토컨피그 모듈을 함께 가져온다.
	// flyway-core 단독 의존 시 FlywayAutoConfiguration이 없어 마이그레이션이 실행되지 않음.
	implementation 'org.springframework.boot:spring-boot-starter-flyway'
	runtimeOnly 'org.flywaydb:flyway-database-oracle'
	
	// HTML 새니타이징 (XSS 서버 측 방어)
	implementation 'org.jsoup:jsoup:1.18.3'

	// 부점 전산예산 편성요청서 반입 — .xls(HSSF)·.xlsx(XSSF) 파싱.
	// exceljs(프론트)는 .xlsx만 읽고 부점 제출본 상당수가 .xls(OLE 복합문서)라 서버 파싱이 필요하다.
	// ⚠️ 폐쇄망: poi, poi-ooxml, poi-ooxml-lite, xmlbeans, commons-collections4,
	//    commons-math3, SparseBitSet, curvesapi, log4j-api가 C:/maven-repo 또는 Nexus에
	//    반입되어 있어야 오프라인 해석된다(반입 신청 선행). commons-compress는 이미 있다.
	implementation 'org.apache.poi:poi:5.4.1'
	implementation 'org.apache.poi:poi-ooxml:5.4.1'

	// Caffeine 캐시 — CacheManager를 ConcurrentMap(TTL 미지원)에서 Caffeine으로 전환(P5/T13).
	// 버전은 Spring Boot 4.1.0 BOM이 관리(caffeine.version=3.2.4)하므로 미지정.
	// ⚠️ 폐쇄망: caffeine-3.2.4.jar + 트랜지티브(checker-qual, error_prone_annotations)가
	//    C:/maven-repo 또는 Nexus에 반입되어 있어야 오프라인 해석된다(반입 신청 선행).
	// starter-cache: CaffeineCacheManager(org.springframework.cache.caffeine, spring-context-support)를
	//   클래스패스에 올린다. 본 프로젝트는 기존에 cache 스타터가 없었으므로(@EnableCaching은 spring-context
	//   제공) Caffeine 연동을 위해 함께 반입한다. spring-context-support도 BOM 관리(버전 미지정).
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation 'com.github.ben-manes.caffeine:caffeine'

	// SSO 연동은 Spring 컨트롤러(SsoController) + RestClient(SsoAgentClient)로 처리합니다.
	// 구 JSP Web Agent(tomcat-embed-jasper / commons-httpclient) 의존은 제거되었습니다.

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'
	
	// QueryDSL — 5.1.0으로 업그레이드 (Snyk SNYK-JAVA-COMQUERYDSL-8400287 SQL Injection 대응)
	implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
	annotationProcessor 'com.querydsl:querydsl-apt:5.1.0:jakarta'
	// 버전 명시 고정 — 오픈소스 라이선스 점검 도구가 build.gradle 텍스트를 파싱하는데,
	// 버전 미지정 선언은 도구 DB의 최신값(마일스톤 jakarta.persistence-api 4.0.0-M6 등)으로
	// 오인식되어 실재하지 않는 라이선스 충돌을 만든다. 아래 두 값은 Spring Boot 4.1.0 BOM
	// 해석 결과(`./gradlew dependencies --configuration annotationProcessor`)와 동일하므로
	// 런타임 동작에 영향이 없다.
	// ⚠️ Boot 업그레이드 시 위 명령으로 BOM 관리값과 일치하는지 재확인하고 어긋나면 갱신할 것.
	annotationProcessor 'jakarta.persistence:jakarta.persistence-api:3.2.0'
	annotationProcessor 'jakarta.annotation:jakarta.annotation-api:3.0.0'

	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.oracle.database.jdbc:ojdbc11'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-actuator-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

// ── JaCoCo 커버리지 설정 ──────────────────────────────────────────────
jacoco {
	// Java 25 바이트코드 지원 버전 — Spring Boot BOM 관리 버전 사용
	toolVersion = "0.8.13"
}

// 커버리지 측정 제외 대상 (측정 의미가 낮은 클래스)
def jacocoExcludes = [
	'**/entity/Q*.class',           // QueryDSL 자동 생성 Q클래스(entity 패키지 한정). '**/Q*.class'는 QnaService 등 정상 클래스까지 오제외하므로 금지
	'**/ItApplication.class',       // 애플리케이션 진입점
	'**/*Config*.class',            // Spring 설정 클래스
	'**/*Properties*.class',        // @ConfigurationProperties
	'**/*Dto*.class',               // DTO (정적 중첩 포함)
	'**/*Dto$*.class',              // DTO 정적 중첩 클래스
	'**/*Entity*.class',            // JPA 엔티티 (Lombok 처리)
	'**/entity/**',                 // entity 패키지 전체
	'**/exception/**',              // 예외 클래스 패키지
	'**/infra/ai/**',               // 외부 Gemini AI 연동
	'**/repository/**',             // Repository 인터페이스 및 QueryDSL 구현체
	'**/domain/log/**',             // 감사로그 인프라 (이벤트 기반 — 통합 테스트 대상)
]

jacocoTestReport {
	dependsOn test
	reports {
		xml.required  = true   // CI/CD 파이프라인 통합용
		html.required = true   // 로컬 리포트: build/reports/jacoco/test/html/index.html
		csv.required  = false
	}
	afterEvaluate {
		classDirectories.setFrom(files(classDirectories.files.collect {
			fileTree(dir: it, exclude: jacocoExcludes)
		}))
	}
}

jacocoTestCoverageVerification {
	// 실행 데이터(.exec) 확보를 위해 test 이후 실행되도록 보장
	dependsOn test
	afterEvaluate {
		classDirectories.setFrom(files(classDirectories.files.collect {
			fileTree(dir: it, exclude: jacocoExcludes)
		}))
	}
	violationRules {
		rule {
			limit {
				// 현재 단계 목표: 70% (TEST.md 기준)
				counter = 'LINE'
				value   = 'COVEREDRATIO'
				minimum = 0.70
			}
		}
		rule {
			element = 'CLASS'
			limit {
				// TEST.md 기준: 클래스별 라인 커버리지 70% 이상
				counter = 'LINE'
				value   = 'COVEREDRATIO'
				minimum = 0.70
			}
			limit {
				// TEST.md 기준: 클래스별 분기 커버리지 70% 이상
				counter = 'BRANCH'
				value   = 'COVEREDRATIO'
				minimum = 0.70
			}
			limit {
				// TEST.md 기준: 클래스별 순환복잡도 커버리지 70% 이상
				counter = 'COMPLEXITY'
				value   = 'COVEREDRATIO'
				minimum = 0.70
			}
		}
	}
}

// CQ-13: 커버리지 기준을 기본 품질 게이트에 연결 — `check`만 실행해도 자동 검증된다
tasks.named('check') {
	dependsOn jacocoTestCoverageVerification
}
// ─────────────────────────────────────────────────────────────────────

tasks.named('test') {
	// 통합 테스트(@Tag("it"))는 로컬 전용 — CI 기본 test 게이트에서 제외
	useJUnitPlatform {
		excludeTags 'it'
	}
	// 테스트 완료 후 자동으로 커버리지 리포트 생성
	finalizedBy jacocoTestReport
}

// 로컬 전용 통합 테스트(실제 로컬 Oracle @DataJpaTest). 로컬 Oracle 가동 필요.
// 실행: ./gradlew integrationTest
tasks.register('integrationTest', Test) {
	description = '로컬 Oracle 기반 @DataJpaTest 통합 테스트 (로컬 전용, 로컬 Oracle 가동 필요)'
	group = 'verification'
	useJUnitPlatform {
		includeTags 'it'
	}
	testClassesDirs = sourceSets.test.output.classesDirs
	classpath = sourceSets.test.runtimeClasspath
	shouldRunAfter tasks.named('test')
}

tasks.named('processResources') {
	def migrationsDir = file('../it_database/migrations')
	if (migrationsDir.isDirectory()) {
		from(migrationsDir) {
			into 'db/migration'
			include 'V*.sql'
		}
	}
}

tasks.withType(JavaCompile).configureEach {
	options.encoding = 'UTF-8'
	// Spring 6.1+는 @PathVariable/@RequestParam의 묵시적 이름 추론을 제거함.
	// javac에 -parameters를 전달해 메서드 파라미터명을 .class에 보존.
	options.compilerArgs.add('-parameters')
}

tasks.withType(Javadoc) {
	options.encoding = 'UTF-8'
	// BE-06: javadoc 기본 경고 출력 상한(100건)을 해제해 전수 측정을 가능하게 한다.
	options.addStringOption('Xmaxwarns', '10000')
}


